fiddling with layouts
# 50-character subject line
#
# 72-character wrapped longer description. This should answer:
#
# * Why was this change necessary?
# * How does it address the problem?
# * Are there any side effects?
#
# Include a link to the ticket, if any.

--- a/src/components/die-chooser/die-chooser.html
+++ b/src/components/die-chooser/die-chooser.html
@@ -1,4 +1,3 @@
-<!-- Generated template for the DieChooser component -->
-<div>
-  {{text}}
-</div>
+<button ion-button (click)="controlClick(-1)"><ion-icon name="remove-circle"></ion-icon></button>
+<svg class="die" [ngClass]="die.class"><use [attr.xlink:href]="die.iconURL"></use></svg>
+<button ion-button (click)="controlClick(+1)"><ion-icon name="add-circle"></ion-icon></button>
