--- a/src/components/die-chooser/die-chooser.scss
+++ b/src/components/die-chooser/die-chooser.scss
@@ -1,3 +1,9 @@
 die-chooser {
-
+  height: 36px;
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 16px;
+  svg {
+    height: 36px;
+  }
 }
