--- a/src/pages/skill-roll/skill-roll.scss
+++ b/src/pages/skill-roll/skill-roll.scss
@@ -1,3 +1,8 @@
 page-skill-roll {
-
+  .chooser-column {
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
