--- a/src/components/die-chooser/die-chooser.scss
+++ b/src/components/die-chooser/die-chooser.scss
@@ -2,8 +2,13 @@ die-chooser {
   height: 36px;
   display: flex;
   flex-direction: row;
-  padding-bottom: 16px;
+  align-items: center;
+  margin-bottom: 1em;
+  .skinny-button {
+    padding: 0;
+  }
   svg {
     height: 36px;
+    width: 36px;
   }
 }
