need to do system-wide CSS fixes
# 50-character subject line
#
# 72-character wrapped longer description. This should answer:
#
# * Why was this change necessary?
# * How does it address the problem?
# * Are there any side effects?
#
# Include a link to the ticket, if any.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,5 +1,12 @@
 // http://ionicframework.com/docs/v2/theming/
 
+$challenge: #A71F34;
+$ability: #1D7F37;
+$difficulty: #3C1F5C;
+$boost: #A2C8EF;
+$setback: #000000;
+$force: #FFFFFF;
+
 
 .proficiency {
   stroke: #000000;
@@ -30,42 +37,42 @@
   stroke: #000000;
   stroke-linejoin: round;
   stroke-width: 10;
-  fill: #A71F34;
+  fill: $challenge;
 }
 
 .ability {
   stroke: #000000;
   stroke-linejoin: round;
   stroke-width: 10;
-  fill: #1D7F37;
+  fill: $ability;
 }
 
 .difficulty {
   stroke: #000000;
   stroke-linejoin: round;
   stroke-width: 10;
-  fill: #3C1F5C;
+  fill: $difficulty;
 }
 
 .boost {
   stroke: #000000;
   stroke-linejoin: round;
   stroke-width: 10;
-  fill: #A2C8EF;
+  fill: $boost;
 }
 
 .setback {
   stroke: #000000;
   stroke-linejoin: round;
   stroke-width: 10;
-  fill: #000000;
+  fill: $setback;
 }
 
 .force {
   stroke: #000000;
   stroke-linejoin: round;
   stroke-width: 10;
-  fill: #FFFFFF;
+  fill: $force;
 }
 
 
