--- a/src/pages/roll-results/roll-results.scss
+++ b/src/pages/roll-results/roll-results.scss
@@ -2,6 +2,15 @@ page-roll-results {
   svg {
     display: flex;
     flex: 0 0 auto;
+    height: 20px;
+    width: 20px;
+  }
+  .result-row {
+    display: flex;
+    flex-direction: row;
+    svg {
+      margin-right: 8px;
+    }
   }
   .die-selection {
     display: flex;
