--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,5 +1,3 @@
-// http://ionicframework.com/docs/v2/theming/
-
 $challenge: #A71F34;
 $ability: #1D7F37;
 $difficulty: #3C1F5C;
@@ -68,24 +66,13 @@ $force: #FFFFFF;
   fill: $setback;
 }
 
+.strong {
+  font-weight: 500;
+}
+
 .force {
   stroke: #000000;
   stroke-linejoin: round;
   stroke-width: 10;
   fill: $force;
 }
-
-
-// App Global Sass
-// --------------------------------------------------
-// Put style rules here that you want to apply globally. These
-// styles are for the entire app and not just one component.
-// Additionally, this file can be also used as an entry point
-// to import other Sass files to be included in the output CSS.
-//
-// Shared Sass variables, which can be used to adjust Ionic's
-// default Sass variables, belong in "theme/variables.scss".
-//
-// To declare rules for a specific mode, create a child rule
-// for the .md, .ios, or .wp mode classes. The mode class is
-// automatically applied to the <body> element in the app.
