--- a/src/components/critical-roller/critical-roller.html
+++ b/src/components/critical-roller/critical-roller.html
@@ -8,7 +8,8 @@
     <svg class="die"><use xlink:href="#plus-outline"></use></svg>
   </button>
   <button ion-button (click)="rollCrit($event)">ROLL</button>
-  <div>
-    RESULTS:{{ (crit$ | async)?.val }} {{ (crit$ | async)?.name }}: {{ (crit$ | async)?.desc }}
+  <div *ngIf"(crit$ | async)?.val > 0">
+    <span class="strong">{{ (crit$ | async)?.name }}({{ (crit$ | async)?.val }}):</span>
+    <span>{{ (crit$ | async)?.desc }}</span>
   </div>
 </div>
