animating icon, dat ngIf tho
# 50-character subject line
#
# 72-character wrapped longer description. This should answer:
#
# * Why was this change necessary?
# * How does it address the problem?
# * Are there any side effects?
#
# Include a link to the ticket, if any.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -13,9 +13,19 @@ $force: #FFFFFF;
   fill: #CBD32C;
 }
 
+.pull-right {
+  margin-left: auto;
+}
+
+@media screen and (max-width: 400px) {
+  .hidden-xs {
+    display:none;
+  }
+}
+
 .die {
-  width: 1.5em;
-  height: 1.5em;
+  width: 24px;
+  height: 24px;
 }
 
 .child-vertical-margin {
