--- a/src/components/die-chooser/die-chooser.scss
+++ b/src/components/die-chooser/die-chooser.scss
@@ -3,12 +3,8 @@ die-chooser {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-bottom: 1em;
+  margin-bottom: 16px;
   .skinny-button {
     padding: 0;
-  }
-  svg {
-    height: 36px;
-    width: 36px;
   }
 }
