--- a/src/pages/roll-results/roll-results.scss
+++ b/src/pages/roll-results/roll-results.scss
@@ -1,16 +1,20 @@
 page-roll-results {
-  svg {
+  .result-header {
+    height: 36px;
+  }
+  n-icons {
     display: flex;
-    flex: 0 0 auto;
-    height: 20px;
-    width: 20px;
+    flex-flow: row wrap;
+    margin-left: 12px;
+    svg {
+      height: 24px;
+      width: 24px;
+      margin-right: 8px;
+    }
   }
   .result-row {
     display: flex;
-    flex-direction: row;
-    svg {
-      margin-right: 8px;
-    }
+    flex: 1 0 auto;
   }
   .die-selection {
     display: flex;
