--- a/src/pages/skill-roll/skill-roll.scss
+++ b/src/pages/skill-roll/skill-roll.scss
@@ -15,6 +15,12 @@ page-skill-roll {
       width: 1.5em;
     }
   }
+  .control-row {
+    display: flex;
+    flex-direction: row;
+    flex: 0 0 auto;
+    justify-content: space-between;
+  }
   .chooser-column {
     display: flex;
     flex: 1 1 auto;
@@ -22,5 +28,8 @@ page-skill-roll {
     align-items: center;
     flex-flow: row wrap;
     justify-content: space-between;
+    die-chooser {
+      flex: 1 0 33%;
+    }
   }
 }
