kinda liking things
# 50-character subject line
#
# 72-character wrapped longer description. This should answer:
#
# * Why was this change necessary?
# * How does it address the problem?
# * Are there any side effects?
#
# Include a link to the ticket, if any.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -13,6 +13,10 @@ $force: #FFFFFF;
   fill: #CBD32C;
 }
 
+.yay {
+  background: rgba(192, 255, 194, 0.59);
+}
+
 .pull-right {
   margin-left: auto;
 }
