--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,23 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <button ion-item menuClose (click)="openPage(rollPage)">
+        Roll
+      </button>
+      <button ion-item menuClose (click)="openPage(settingsPage)">
+        Options
+      </button>
+      <button ion-item menuClose (click)="openPage(historyPage)">
+        History (NYI)
+      </button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+
+<ion-nav #content [root]="rootPage"></ion-nav>
