--- a/src/pages/skill-roll/skill-roll.scss
+++ b/src/pages/skill-roll/skill-roll.scss
@@ -20,6 +20,9 @@ page-skill-roll {
     flex-direction: row;
     flex: 0 0 auto;
     justify-content: space-between;
+    &.lefty {
+      flex-direction: row-reverse;
+    }
   }
   .chooser-column {
     display: flex;
