--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,18 +6,18 @@
   </ion-header>
   <ion-content>
     <ion-list>
-      <button ion-item menuClose (click)="openPage(rollPage)">
+      <button ion-item menuClose (click)="openPage('roll')">
         Roll
       </button>
-      <button ion-item menuClose (click)="openPage(settingsPage)">
+      <button ion-item menuClose (click)="openPage('settings')">
         Options
       </button>
-      <button ion-item menuClose (click)="openPage(historyPage)">
-        History (NYI)
+      <button ion-item menuClose (click)="openPage('history')">
+        History
       </button>
     </ion-list>
   </ion-content>
 </ion-menu>
 
 
-<ion-nav #content [root]="rootPage"></ion-nav>
+<ion-nav #content></ion-nav>
